change all sites r10k deploy to public interface
Change-Id: I24d3f438dedb27e352f1b9dbde4f0a8bf8e0bf7c

--- a/puppet.yaml
+++ b/puppet.yaml
@@ -596,7 +596,7 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'resplat-cloud'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-deploy-control-repo':
          access: 'nobody'
          organisation: 'resplat-cloud'
@@ -604,11 +604,11 @@
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'resplat-cloud'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'resplat-cloud'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'resplat-cloud'
@@ -677,7 +677,7 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'nectar-monash'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-deploy-control-repo':
          access: 'nobody'
          organisation: 'nectar-monash'
@@ -685,11 +685,11 @@
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'nectar-monash'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'nectar-monash'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'nectar-monash'
@@ -706,7 +706,7 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'nectar-monash'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-deploy-control-repo':
          access: 'nobody'
          organisation: 'nectar-monash'
@@ -714,11 +714,11 @@
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'nectar-monash'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'nectar-monash'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'nectar-monash'
@@ -735,7 +735,7 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-deploy-control-repo':
          access: 'nobody'
          organisation: 'internal'
@@ -743,11 +743,11 @@
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'internal'
@@ -764,7 +764,7 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'resplat-hpc'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-deploy-control-repo':
          access: 'nobody'
          organisation: 'resplat-hpc'
@@ -772,11 +772,11 @@
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'resplat-hpc'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'resplat-hpc'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'resplat-hpc'
@@ -793,7 +793,7 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'tas-gerrit'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-deploy-control-repo':
          access: 'nobody'
          organisation: 'tas-gerrit'
@@ -801,11 +801,11 @@
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'tas-gerrit'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'tas-gerrit'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'tas-gerrit'
@@ -822,7 +822,7 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'tas-gerrit'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-deploy-control-repo':
          access: 'nobody'
          organisation: 'tas-gerrit'
@@ -830,11 +830,11 @@
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'tas-gerrit'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'tas-gerrit'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'tas-gerrit'
@@ -877,7 +877,7 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-deploy-control-repo':
          access: 'nobody'
          organisation: 'internal'
@@ -885,11 +885,11 @@
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'internal'
@@ -958,7 +958,7 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-deploy-control-repo':
          access: 'nobody'
          organisation: 'internal'
@@ -966,11 +966,11 @@
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'internal'
@@ -987,7 +987,7 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-deploy-control-repo':
          access: 'nobody'
          organisation: 'internal'
@@ -995,11 +995,11 @@
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'internal'
@@ -1024,11 +1024,11 @@
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'internal'
@@ -1045,15 +1045,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'QRIScloud'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'QRIScloud'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'QRIScloud'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10k_host: 'r10k.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'QRIScloud'
