Add yaml linter to containers repo
Change-Id: I5c9e7556245a849009d7d58ec33ed5d58e8dfb93

--- a/containers.yaml
+++ b/containers.yaml
@@ -1,3 +1,10 @@
+- project:
+    name: containers
+    jobs:
+      - '{name}-yaml':
+         access: 'nobody'
+         organisation: 'internal'
+
 - job-template:
     name: 'requirements-container-{ubuntu_release}-{os_release}'
     defaults: global
