Add html proofer check to tutorials
Change-Id: I77e7945aa01dfa8404a1e7b7d33616882ef94b39

--- a/builder-macros.yaml
+++ b/builder-macros.yaml
@@ -263,6 +263,17 @@
           curl -s --user $GERRIT_API -X POST -H 'Content-Type: application/json' -d "{'message': 'Test at: $SWIFTURL'}" https://review.rc.nectar.org.au/a/changes/$GERRIT_CHANGE_ID/revisions/$GERRIT_PATCHSET_NUMBER/review
 
 - builder:
+    name: jekyll-html-check
+    builders:
+      - shell: |
+          bundle install --path vendor/bundle
+          bundle exec jekyll build
+          bundle exec htmlproofer --allow-hash-href \
+              --assume_extension --url-ignore '/localhost/' \
+              --typhoeus_config '{ \"ssl_verifyhost\": 0, \"ssl_verifypeer\": false }' \
+              ./_site"
+
+- builder:
     name: jekyll-test-build-cleanup
     builders:
       - shell: |
