--- a/docs.yaml
+++ b/docs.yaml
@@ -18,6 +18,9 @@
       - '{name}-jekyll-test-build':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
+      - '{name}-jekyll-html-check':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
       - '{name}-jekyll-test-build-cleanup':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
