Fixes for jekyll-html-check
Change-Id: If04719d8f79eb111d2727d1f68e352450a1d7e3b

--- a/builder-macros.yaml
+++ b/builder-macros.yaml
@@ -270,8 +270,8 @@
           bundle exec jekyll build
           bundle exec htmlproofer --allow-hash-href \
               --assume_extension --url-ignore '/localhost/' \
-              --typhoeus_config '{ \"ssl_verifyhost\": 0, \"ssl_verifypeer\": false }' \
-              ./_site"
+              --typhoeus_config '{ "ssl_verifyhost": 0, "ssl_verifypeer": false }' \
+              ./_site
 
 - builder:
     name: jekyll-test-build-cleanup
