Add --generate-types when deploying environments
This is needed for the sysctl transition in Change
Iac04bfa54a4f350c7e028351b20be225cd19f8dc

Change-Id: I4f7b91a1851819c4c4f751f781699c5e77b51279

--- a/builder-macros.yaml
+++ b/builder-macros.yaml
@@ -327,7 +327,7 @@
             set -x
             # strips 'internal/puppet-site-nectar' to 'nectar'
             ENVIRONMENT=`echo $GERRIT_PROJECT | cut -f2 -d'/' | cut -f3 -d'-'`
-            r10k -c /etc/puppetlabs/r10k/r10k-$ENVIRONMENT.yaml deploy environment --puppetfile master --verbose
+            r10k -c /etc/puppetlabs/r10k/r10k-$ENVIRONMENT.yaml deploy environment --puppetfile master --verbose --generate-types
 
 - builder:
     name: r10k-deploy
