Move qld_ctrl to new r10k style deploy
This was missed out in Change I2ac46ecdcae914ab57bfda518f81c1c7f25ef324

Change-Id: I9d7e58bd1c123db5ed565e1af853c5c16bb71b13

--- a/puppet.yaml
+++ b/puppet.yaml
@@ -1046,6 +1046,10 @@
          access: 'nobody'
          organisation: 'QRIScloud'
          r10k_host: 'r10k.rc.nectar.org.au'
+      - '{name}-r10k-deploy-control-repo':
+         access: 'nobody'
+         organisation: 'QRIScloud'
+         puppet_host: 'puppet.mgmt.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'QRIScloud'
