Add intersect-qld AZ
For the new nodes advertising intersect AZ in QLD

Change-Id: I4d6c14c106eaee3dc43f8ec52cc7e2c8b59296c5

--- a/job-templates.yaml
+++ b/job-templates.yaml
@@ -1314,6 +1314,7 @@
           choices:
             - auckland
             - intersect-01
+            - intersect-qld
             - melbourne-qh2
             - melbourne-qh2-uom
             - monash-01
