--- a/tempest.yaml
+++ b/tempest.yaml
@@ -42,6 +42,7 @@
           choices:
             - auckland
             - intersect-01
+            - intersect-qld
             - melbourne-qh2
             - melbourne-qh2-uom
             - monash-01
@@ -120,6 +121,7 @@
           choices:
             - auckland
             - intersect-01
+            - intersect-qld
             - melbourne-qh2
             - melbourne-qh2-uom
             - monash-01
@@ -195,6 +197,7 @@
           choices:
             - auckland
             - intersect-01
+            - intersect-qld
             - melbourne-qh2
             - melbourne-qh2-uom
             - monash-01
@@ -250,6 +253,7 @@
           choices:
             - auckland
             - intersect-01
+            - intersect-qld
             - melbourne-qh2
             - melbourne-qh2-uom
             - monash-01
@@ -306,6 +310,7 @@
           choices:
             - auckland
             - intersect-01
+            - intersect-qld
             - melbourne-qh2
             - melbourne-qh2-uom
             - monash-01
@@ -368,6 +373,7 @@
           choices:
             - auckland
             - intersect-01
+            - intersect-qld
             - melbourne-qh2
             - melbourne-qh2-uom
             - monash-01
@@ -423,6 +429,7 @@
           choices:
             - auckland
             - intersect-01
+            - intersect-qld
             - melbourne-qh2
             - melbourne-qh2-uom
             - monash-01
@@ -484,6 +491,7 @@
           choices:
             - auckland
             - intersect-01
+            - intersect-qld
             - melbourne-qh2
             - melbourne-qh2-uom
             - monash-01
@@ -540,6 +548,7 @@
           choices:
             - auckland
             - intersect-01
+            - intersect-qld
             - melbourne-qh2
             - melbourne-qh2-uom
             - monash-01
@@ -1114,6 +1123,7 @@
     site:
         - auckland
         - intersect-01
+        - intersect-qld
         - melbourne-qh2
         - melbourne-qh2-uom
         - monash-01
@@ -1393,6 +1403,7 @@
             - Any zone
             - auckland
             - intersect-01
+            - intersect-qld
             - melbourne-qh2
             - melbourne-qh2-uom
             - monash-01
@@ -1450,6 +1461,7 @@
             - Any zone
             - auckland
             - intersect-01
+            - intersect-qld
             - melbourne-qh2
             - melbourne-qh2-uom
             - monash-01
