--- a/python.yaml
+++ b/python.yaml
@@ -831,6 +831,21 @@
          environment: 'pep8'
 
 - project:
+    name: python-troveclient
+    jobs:
+      - '{name}-os-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+         environment: 'py38'
+      - '{name}-os-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+         environment: 'pep8'
+      - '{name}-os-deb-package':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+
+- project:
     name: trove
     jobs:
       - '{name}-os-tox-{environment}':
