--- a/other.yaml
+++ b/other.yaml
@@ -484,6 +484,11 @@
          access: 'nobody'
          organisation: 'internal'
          ubuntu_release: 'focal'
+         os_release: 'ussuri'
+      - 'requirements-container-{ubuntu_release}-{os_release}':
+         access: 'nobody'
+         organisation: 'internal'
+         ubuntu_release: 'focal'
          os_release: 'victoria'
 
 - project:
