Add CentOS Stream 8
Change-Id: Ic2eee814d0dd566c9343b8cc007de98aca140704

--- a/images.yaml
+++ b/images.yaml
@@ -9,6 +9,11 @@
       - 'image-build-official-{name}'
 
 - project:
+    name: centos-stream-8
+    jobs:
+      - 'image-build-official-{name}'
+
+- project:
     name: debian-9
     jobs:
       - 'image-build-official-{name}'
