Add tasmania-02 az
Change-Id: I2380e2c6f174f32760582e76dee673550b0b45da

--- a/job-templates.yaml
+++ b/job-templates.yaml
@@ -1323,6 +1323,7 @@
             - qld
             - swinburne-01
             - tasmania
+            - tasmania-02
             - tasmania-s
             - coreservices
             - qh2-test
