Add quiet period for *-r10k-deploy-control-repo
This job must be run AFTER *-r10k-cleanup finishes, as *-r10k-cleanup
will push the merged commmit to the master branch in r10k repo which
this job picks up from.

Add a quiet period so cleanup will be done by the time this runs

Change-Id: I2f0caa400a58de24862e6fff850198f7246b619f

--- a/job-templates.yaml
+++ b/job-templates.yaml
@@ -1170,6 +1170,7 @@
     name: '{name}-r10k-deploy-control-repo'
     defaults: global
     node: internal
+    quiet-period: 10
 
     parameters:
       - string:
