Fix Keystone Ussuri builds
Use bionic for Keystone Ussuri to avoid py38 compat issues.

Change-Id: I9b95dec0f8b3b9c5e07448c86f8f7aa15750dd2a

--- a/python.yaml
+++ b/python.yaml
@@ -798,11 +798,11 @@
 - project:
     name: keystone
     jobs:
-      - '{name}-os-tox-{environment}':
+      - '{name}-os-bionic-ussuri-tox-{environment}':
          access: 'nobody'
          organisation: 'internal'
          environment: 'py36'
-      - '{name}-os-tox-{environment}':
+      - '{name}-os-bionic-ussuri-tox-{environment}':
          access: 'nobody'
          organisation: 'internal'
          environment: 'pep8'
