Add container build for Keystone
Change-Id: I3caabad44c33798e77c986a38a2b9ecd55b19c60

--- a/containers.yaml
+++ b/containers.yaml
@@ -30,7 +30,7 @@
             - project-compare-type: 'PLAIN'
               project-pattern: '{organisation}/{name}'
               branches:
-                - branch-compare-type: 'PLAIN'
+                - branch-compare-type: 'REG_EXP'
                   branch-pattern: 'nectar/.*'
                 - branch-compare-type: 'PLAIN'
                   branch-pattern: 'master'
@@ -70,7 +70,7 @@
           stage('Build') {{
             steps {{
                 sh '''
-                make build BUILDER=podman TAG=$TAG
+                make build BUILDER=podman BUILDER_ARGS=--squash-all TAG=$TAG
                 '''
             }}
           }}
