--- a/job-templates.yaml
+++ b/job-templates.yaml
@@ -601,6 +601,73 @@
           users:
               - '4946c3a5-9f5e-4eac-9ec4-90e1e348db14'
 
+# Temp to support bionic-ussuri
+- job-template:
+    name: '{name}-os-bionic-deb-package'
+    defaults: global
+    node: bionic-ussuri
+
+    parameters:
+      - string:
+          name: GERRIT_REFSPEC
+          default: refs/heads/master
+          description: "The default ref to test."
+      - string:
+          name: GERRIT_BRANCH
+          default: master
+          description: "The default branch to test."
+
+    triggers:
+      - gerrit:
+          trigger-on:
+              - change-merged-event
+          projects:
+            - project-compare-type: 'PLAIN'
+              project-pattern: '{organisation}/{name}'
+              branches:
+                - branch-compare-type: 'PLAIN'
+                  branch-pattern: 'master'
+                - branch-compare-type: 'REG_EXP'
+                  branch-pattern: 'nectar/ussuri'
+                - branch-compare-type: 'REG_EXP'
+                  branch-pattern: 'uom/ussuri'
+                - branch-compare-type: 'REG_EXP'
+                  branch-pattern: 'debian/ussuri'
+          silent: false
+          escape-quotes: true
+
+          skip-vote:
+            successful: true
+            failed: true
+            unstable: true
+            notbuilt: true
+
+    scm:
+      - git:
+         url: ssh://jenkins@review.rc.nectar.org.au:29418/{organisation}/{name}.git
+         credentials-id: 4946c3a5-9f5e-4eac-9ec4-90e1e348db14
+         refspec: $GERRIT_REFSPEC
+         branches:
+          - origin/$GERRIT_BRANCH
+         skip-tag: true
+         wipe-workspace: true
+         clean:
+           after: true
+         choosing-strategy: gerrit
+
+    builders:
+      - os-pbuilder-checkout
+      - os-pbuilder-create-xenial
+      - os-pbuilder-buildpackage-xenial
+
+    publishers:
+      !include: publisher.yaml.inc
+
+    wrappers:
+      - ssh-agent-credentials:
+          users:
+              - '4946c3a5-9f5e-4eac-9ec4-90e1e348db14'
+
 - job-template:
     name: '{name}-yaml'
     defaults: global
