--- a/python.yaml
+++ b/python.yaml
@@ -420,6 +420,9 @@
       - '{name}-os-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
+      - '{name}-os-bionic-deb-package':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
       - '{name}-container-{ubuntu_release}-{os_release}':
          access: 'nobody'
          organisation: 'NeCTAR-RC'
