Do full clone in container build
To get tags we need to avoid doing a shallow clone.

Change-Id: Iaa6f49f643cbedaeb1ed681b84f1874b2739d9a1

--- a/containers.yaml
+++ b/containers.yaml
@@ -52,7 +52,7 @@
                     $class: 'GitSCM',
                     branches: [[name: 'origin/$GERRIT_BRANCH']],
                     extensions: [
-                      [$class: 'CloneOption', depth: 1, honorRefspec: true, shallow: true],
+                      [$class: 'CloneOption', honorRefspec: true],
                       [$class: 'CleanCheckout'],
                       [$class: 'BuildChooserSetting', buildChooser: [$class: 'GerritTriggerBuildChooser']]
                     ],
