Fixup warre job
Change-Id: Ideafcf4cf5d31159041b1eaf0d920ba045ada9ae

--- a/python.yaml
+++ b/python.yaml
@@ -1057,7 +1057,7 @@
          environment: 'flake8'
 
 - project:
-    name: manuka
+    name: warre
     jobs:
       - '{name}-os-tox-{environment}':
          access: 'anonymous'
