Add container build for Manila
Change-Id: I9b537992a683c483d24674f9e54d02f5dbf6e2bc

--- a/python.yaml
+++ b/python.yaml
@@ -662,6 +662,9 @@
       - '{name}-os-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
+      - '{name}-container':
+         access: 'nobody'
+         organisation: 'NeCTAR-RC'
 
 - project:
     name: manila-ui
