Add details banner for scenario check
Swe wanted this!

Change-Id: I6e21b60ed1dd20f51f51d18c51d0a4d0513f19fc

--- a/tempest.yaml
+++ b/tempest.yaml
@@ -407,6 +407,16 @@
     builders:
       - shell: |
           #!/bin/bash
+          echo
+          echo "================================================================="
+          echo
+          echo "                   CLOUD:   $CLOUD"
+          echo "                   AZ:      $AVAILABILITY_ZONE"
+          echo "                   HOST:    $HOST"
+          echo "                   STARTED: $(date)"
+          echo
+          echo "================================================================="
+          echo
           . /opt/tempest/bin/activate
           tmpdir=`mktemp -d --suffix=_tempest`
           cd $WORKSPACE/tempest/
