--- a/python.yaml
+++ b/python.yaml
@@ -662,9 +662,11 @@
       - '{name}-os-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
-      - '{name}-container':
+      - '{name}-container-{ubuntu_release}-{os_release}':
          access: 'nobody'
          organisation: 'NeCTAR-RC'
+         ubuntu_release: 'focal'
+         os_release: 'ussuri'
 
 - project:
     name: manila-ui
