--- a/python.yaml
+++ b/python.yaml
@@ -1072,6 +1072,10 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'flake8'
+      - '{name}-os-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+         environment: 'cover'
 
 - project:
     name: python-warreclient
