Add cover check for warre
Change-Id: Ie79c8adfaa7378239ac395a56a18fb76e4614dad

--- a/python.yaml
+++ b/python.yaml
@@ -1077,6 +1077,10 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'flake8'
+      - '{name}-os-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+         environment: 'cover'
 
 - project:
     name: python-warreclient
