--- a/python.yaml
+++ b/python.yaml
@@ -1081,6 +1081,9 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'cover'
+      - '{name}-container':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
 
 - project:
     name: python-warreclient
