Add container build for warre
Change-Id: Ib57b3f2162a823bd9289e31ad3c42f296e57839d

--- a/python.yaml
+++ b/python.yaml
@@ -1076,6 +1076,9 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'cover'
+      - '{name}-container':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
 
 - project:
     name: python-warreclient
