Update tox jobs for nectar-openstack
Change-Id: Ib34a08b1ceca83fb961bdc53ecd7ad1cf70d8e7d

--- a/python.yaml
+++ b/python.yaml
@@ -131,11 +131,11 @@
       - '{name}-bionic-tox-{environment}':
          access: 'nobody'
          organisation: 'internal'
-         environment: 'py27'
-      - '{name}-bionic-tox-{environment}':
+         environment: 'py36'
+      - '{name}-focal-tox-{environment}':
          access: 'nobody'
          organisation: 'internal'
-         environment: 'py36'
+         environment: 'py38'
       - '{name}-bionic-tox-{environment}':
          access: 'nobody'
          organisation: 'internal'
