Don't use yaml-lint on containers repo
This chokes on helm templates and doesn't add a huge
amount of value at the moment, so disable for now.

Change-Id: I0f36de019d6351926271f948ef3c1ba88a18224e

--- a/containers.yaml
+++ b/containers.yaml
@@ -1,7 +1,7 @@
 - project:
     name: containers
     jobs:
-      - '{name}-yaml':
+      - '{name}-dummy':
          access: 'nobody'
          organisation: 'internal'
 
