--- a/python.yaml
+++ b/python.yaml
@@ -275,6 +275,23 @@
          os_release: 'victoria'
 
 - project:
+    name: cyborg
+    jobs:
+      - '{name}-focal-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+         environment: 'py38'
+      - '{name}-focal-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+         environment: 'pep8'
+      - '{name}-container-{ubuntu_release}-{os_release}':
+         access: 'nobody'
+         organisation: 'NeCTAR-RC'
+         ubuntu_release: 'focal'
+         os_release: 'victoria'
+
+- project:
     name: manuka
     jobs:
       - '{name}-os-tox-{environment}':
