Add nectar-keycloak container job
Change-Id: Ifa57970cd9fc71105a43f0501d84f20666567207

--- a/other.yaml
+++ b/other.yaml
@@ -497,3 +497,13 @@
       - '{name}-dummy':
          access: 'nobody'
          organisation: 'NeCTAR-RC'
+
+- project:
+    name: nectar-keycloak
+    jobs:
+      - '{name}-dummy':
+         access: 'nobody'
+         organisation: 'NeCTAR-RC'
+      - '{name}-container':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
