--- a/ansible.yaml
+++ b/ansible.yaml
@@ -1,21 +1,36 @@
 - project:
     name: nectar-ansible
     jobs:
-      - 'nectar-ansible-{environment}':
-         environment: linters
-      - 'nectar-ansible-{environment}-{playbook}':
-         environment: check
+      - 'nectar-ansible-{task}':
+         task: linters
+      - 'nectar-ansible-{environment}-{task}-{playbook}':
+         environment: rctest
+         task: check
          playbook: f5-base
-      - 'nectar-ansible-{environment}-{playbook}':
-         environment: check
+      - 'nectar-ansible-{environment}-{task}-{playbook}':
+         environment: rctest
+         task: check
+         playbook: f5-base
+      - 'nectar-ansible-{environment}-{task}-{playbook}':
+         environment: rctest
+         task: check
          playbook: f5-certificates
-      - 'nectar-ansible-{environment}-{playbook}':
-         environment: check
+      - 'nectar-ansible-{environment}-{task}-{playbook}':
+         environment: production
+         task: check
+         playbook: f5-certificates
+      - 'nectar-ansible-{environment}-{task}-{playbook}':
+         environment: production
+         task: check
+         playbook: f5-services
+      - 'nectar-ansible-{environment}-{task}-{playbook}':
+         environment: production
+         task: check
          playbook: f5-services
 
 
 - job-template:
-    name: 'nectar-ansible-{environment}'
+    name: 'nectar-ansible-{task}'
     concurrent: false
     defaults: global
     node: internal
@@ -71,7 +86,7 @@
           export no_proxy=localhost,127.0.0.1,localaddress,169.254.169.254,172.16.0.0/12,115.146.80/20,.melbourne.rc.nectar.org.au,.melbourne.nectar.org.au,.storage.unimelb.edu.au,.cloud.unimelb.edu.au,.its.unimelb.edu.au,.unimelb.net.au,.test.rc.nectar.org.au,.dev.rc.nectar.org.au,.rc.nectar.org.au
           export OS_TEST_TIMEOUT=300
           export ANSIBLE_FORCE_COLOR=true
-          tox -e {environment}
+          tox -e {task}
 
     wrappers:
       - ansicolor
@@ -81,7 +96,7 @@
 
 
 - job-template:
-    name: 'nectar-ansible-{environment}-{playbook}'
+    name: 'nectar-ansible-{environment}-{task}-{playbook}'
     concurrent: false
     defaults: global
     node: internal
@@ -136,7 +151,7 @@
           export no_proxy=localhost,127.0.0.1,localaddress,169.254.169.254,172.16.0.0/12,115.146.80/20,.melbourne.rc.nectar.org.au,.melbourne.nectar.org.au,.storage.unimelb.edu.au,.cloud.unimelb.edu.au,.its.unimelb.edu.au,.unimelb.net.au,.test.rc.nectar.org.au,.dev.rc.nectar.org.au,.rc.nectar.org.au
           export OS_TEST_TIMEOUT=300
           export ANSIBLE_FORCE_COLOR=true
-          tox -e {environment} playbook-{playbook}.yaml
+          tox -e {task}-{environment} playbook-{playbook}.yaml
 
     wrappers:
       - ansicolor
